Bug 1425812 - Rely on native Core Text support for COLR/CPAL fonts on High Sierra. r=lsalzman